<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationFragment">

    <View
            android:layout_width="120dp"
            android:layout_marginTop="45dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_pinterest" />

    <View
            android:layout_width="293dp"
            android:layout_height="235dp"
            android:layout_marginTop="223dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/box_login" />

    <EditText
            style="@style/input_fields_text"
            android:id="@+id/registration_username_box"
            android:layout_width="267dp"
            android:layout_height="33dp"
            android:layout_marginTop="250dp"
            android:hint="@string/login_field_hint"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="3dp"
            android:paddingStart="5dp"
            android:background="@drawable/box_username"
            android:layout_gravity="center_horizontal"
            android:elevation="4dp"
            android:inputType="text"
            android:importantForAutofill="no" />

    <EditText
            style="@style/input_fields_text"
            android:id="@+id/registration_email_box"
            android:layout_width="267dp"
            android:layout_height="33dp"
            android:layout_marginTop="300dp"
            android:hint="@string/registration_email_field_hint"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="3dp"
            android:paddingStart="5dp"
            android:background="@drawable/box_username"
            android:layout_gravity="center_horizontal"
            android:elevation="4dp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

    <EditText
            style="@style/input_fields_text"
            android:id="@+id/registration_password_box"
            android:layout_width="267dp"
            android:layout_height="33dp"
            android:layout_marginTop="350dp"
            android:hint="@string/password_field_hint"
            android:background="@drawable/box_password"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="3dp"
            android:paddingStart="5dp"
            android:elevation="4dp"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
            style="@style/login_button_text"
            android:id="@+id/registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_gravity="center_horizontal"
            app:backgroundTint="@color/login_button"
            android:text="@string/registration_button_text"
            android:textAllCaps="false" />

</FrameLayout>
