<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AnotherUserProfileFragment">

    <androidx.cardview.widget.CardView
            android:id="@+id/profile_details"
            app:cardElevation="0dp"
            android:clickable="true"
            android:layout_width="95dp"
            android:layout_height="125dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:focusable="true">

        <ImageView
                android:id="@+id/avatar_picture"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/help_face_creator_4" />

        <TextView
                android:id="@+id/username_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:textStyle="bold"
                android:text="@string/another_username_text"
                android:textAppearance="@style/profile_page_style"
                android:gravity="center_horizontal|center_vertical" />

        <TextView
                android:id="@+id/username_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:text="@string/another_username_link"
                android:textAppearance="@style/profile_page_style"
                android:gravity="center_horizontal|center_vertical" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
            style="@style/another_user_profile_follow"
            android:id="@+id/login_button"
            android:elevation="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_gravity="center_horizontal"
            app:backgroundTint="@color/white"
            app:cornerRadius="25dp"
            android:translationZ="5dp"
            android:text="@string/another_user_profile_follow"
            android:textAllCaps="false" />


    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />


</FrameLayout>