<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActualPinFragment">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:src="@drawable/help_actual_pin" />

    <androidx.cardview.widget.CardView
            android:clickable="true"
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:minHeight="48dp"
            android:layout_marginTop="508dp"
            android:focusable="true">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    tools:src="@drawable/help_face_creator_actual_pin" />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:paddingLeft="12dp"
                        android:layout_gravity="center"
                        tools:text="@string/actual_pin_username"
                        android:textAppearance="@style/error_page_style" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="13sp"
                        android:paddingLeft="12dp"
                        android:textStyle="normal"
                        tools:text="@string/actual_pin_followers"
                        android:textAppearance="@style/error_page_style" />
            </LinearLayout>
        </LinearLayout>

        <View
                android:id="@+id/share"
                android:clickable="true"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="right|center"
                android:layout_marginRight="80dp"
                android:background="@drawable/ic_share"
                android:contentDescription="Share"
                android:focusable="true" />

        <View
                android:id="@+id/place"
                android:clickable="true"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="right|center"
                android:contentDescription="Location"
                android:background="@drawable/ic_location"
                android:focusable="true" />
    </androidx.cardview.widget.CardView>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/actual_pin_text"
            android:textAppearance="@style/actual_pin_text_style"
            android:textAlignment="center"
            android:layout_marginTop="560dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />


</FrameLayout>
