<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_profile"
        tools:context=".ProfileFragment">

    <View
            android:id="@+id/settings"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="right"
            android:layout_marginRight="50dp"
            android:background="@drawable/ic_settings" />

    <androidx.cardview.widget.CardView
            android:id="@+id/profile_details"
            app:cardElevation="0dp"
            android:clickable="true"
            android:layout_width="95dp"
            android:layout_height="125dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:focusable="true">

        <ImageView
                android:id="@+id/avatar_picture"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/help_face_creator_main" />

        <TextView
                android:id="@+id/username_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:textStyle="bold"
                android:text="@string/username_text"
                android:textAppearance="@style/profile_page_style"
                android:gravity="center_horizontal|center_vertical" />

        <TextView
                android:id="@+id/username_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:text="@string/username_link"
                android:textAppearance="@style/profile_page_style"
                android:gravity="center_horizontal|center_vertical" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:orientation="horizontal">

        <EditText
                style="@style/input_fields_text"
                android:id="@+id/search_field"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:hint="@string/search_your_pin"
                android:drawableStart="@drawable/ic_search"
                android:drawableEnd="@drawable/ic_camera"
                android:drawablePadding="3dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:background="@drawable/ic_search_pins"
                android:inputType="text"
                android:importantForAutofill="no" />

        <View
                android:id="@+id/button_add"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="right|center"
                android:background="@drawable/ic_add" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_my_pins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="270dp" />

</FrameLayout>
